<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvInvoiceListaArticulosLabPrecio"
        android:fontFamily="@font/opensans_variablefont_wdth_wght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimenSeparacionLista"
        android:textStyle="bold"
        android:text="@string/tvListaArticulosLabPrecio"
        app:layout_constraintBottom_toBottomOf="@+id/tvInvoiceListaArticulosNombre"
        app:layout_constraintStart_toEndOf="@+id/tvInvoiceListaArticulosNombre"
        app:layout_constraintTop_toTopOf="@+id/tvInvoiceListaArticulosNombre" />

    <TextView
        android:id="@+id/tvInvoiceListaArticulosPrecio"
        android:fontFamily="@font/opensans_variablefont_wdth_wght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvListaArticulosPrecio"
        app:layout_constraintBottom_toBottomOf="@+id/tvInvoiceListaArticulosLabPrecio"
        app:layout_constraintStart_toEndOf="@+id/tvInvoiceListaArticulosLabPrecio"
        app:layout_constraintTop_toTopOf="@+id/tvInvoiceListaArticulosLabPrecio" />

    <TextView
        android:id="@+id/tvInvoiceListaArticulosNombre"
        android:fontFamily="@font/opensans_variablefont_wdth_wght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvListaArticulosNombre"
        app:layout_constraintBottom_toBottomOf="@+id/tvInvoiceListaArticulosLabNombre"
        app:layout_constraintStart_toEndOf="@+id/tvInvoiceListaArticulosLabNombre"
        app:layout_constraintTop_toTopOf="@+id/tvInvoiceListaArticulosLabNombre" />

    <TextView
        android:id="@+id/tvInvoiceListaArticulosLabNombre"
        android:fontFamily="@font/opensans_variablefont_wdth_wght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimenSeparacionLista"
        android:textStyle="bold"
        android:text="@string/tvListaArticulosLabNombre"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:fontFamily="@font/opensans_variablefont_wdth_wght"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>